--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@truffle/contract": "^4.6.10",
+    "emailjs-com": "^3.2.0",
     "ethers": "^5.7.2",
+    "hashconnect": "^0.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.6.1",
